--- a/views/catalog.ejs
+++ b/views/catalog.ejs
@@ -27,38 +27,7 @@
 
   <body id="page-top">
 
-    <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
-
-      <a class="navbar-brand mr-1" href="/">Black Board</a>
-
-      <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
-        <i class="fas fa-bars"></i>
-      </button>
-
-
-      <!-- Navbar -->
-      <ul class="navbar-nav ml-auto mr-0 mr-md-3 my-2 my-md-0">
-        <li class="nav-item dropdown no-arrow mx-1">
-          <a class="nav-link" href="/tasks-page">
-            <i class="fas fa-bell fa-fw"></i>
-          </a>
-        </li>
-        <li class="nav-item dropdown no-arrow mx-1">
-          <a class="nav-link" href="/messages-page">
-            <i class="fas fa-envelope fa-fw"></i>
-          </a>
-        </li>
-        <li class="nav-item dropdown no-arrow">
-          <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fas fa-user-circle fa-fw"></i>
-          </a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-            <h6 class="dropdown-header">Hi Mike Doe</h6>
-          </div>
-        </li>
-      </ul>
-
-    </nav>
+    <%-include('sidebar')%>
 
     <div id="wrapper">
 
@@ -129,40 +98,19 @@
                     </tr>
                   </tfoot>
                   <tbody>
-                    <tr>
-                      <td>Ninebot by Segway Kickscooter ES2</td>
-                      <td>Urbain - Route (8'), Autonomie Jusqu'à 25 km, Vitesse max. 25 km/h</td>
-                      <td>12,5kg</td>
-                      <td>499€</td>
-                      <td>5</td>
-                      <td><img src="/images/ninebot-segway-kickscooter.jpg"></td>
-                    </tr>
-                    <tr>
-                      <td>Xiaomi M365</td>
-                      <td>Autonomie Jusqu'à 25 km, Vitesse max. 25 km/h</td>
-                      <td>12,5kg</td>
-                      <td>370€</td>
-                      <td>9</td>
-                      <td><img src="/images/xiaomi M365-gris.jpg"></td>
-                    </tr>
-
-                    <tr>
-                      <td>E-Twow Booster Evolution S</td>
-                      <td>Urbain - Route (8'), Autonomie Jusqu'à 30 km, Vitesse max. 35 km/h</td>
-                      <td>11kg</td>
-                      <td>800€</td>
-                      <td>11</td>
-                      <td><img src="/images/e-twow-evolution-s.jpg"></td>
-                    </tr>
-                    <tr class="table-danger">
-                      <td>Inmotion L8F</td>
-                      <td>Urbain - Route (8'), Autonomie Jusqu'à 30 km, Vitesse max. 30 km/h</td>
-                      <td>11,7kg</td>
-                      <td>549€</td>
-                      <td>2</td>
-                      <td><img src="/images/inmotion-l8f.jpg"></td>
-                    </tr>
-
+                    <%for(var i=0; i<allArticles.length;i++){
+                      if(allArticles[i].stock <= 2){%>
+                        <tr class="table-danger">
+                      <%}else{%>
+                      <tr><%}%>
+                        <td ><%=allArticles[i].title%></td>
+                        <td><%=allArticles[i].description%></td>
+                        <td><%=allArticles[i].weight%></td>
+                        <td><%=allArticles[i].price%></td>
+                        <td><%=allArticles[i].stock%></td>
+                        <td><img src="/images/<%=allArticles[i].img%>"></td>
+                      </tr>
+                    <%}%>
                   </tbody>
                 </table>
               </div>
