--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,37 +27,7 @@
 
   <body id="page-top">
 
-    <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
-
-      <a class="navbar-brand mr-1" href="/">Black Board</a>
-
-      <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
-        <i class="fas fa-bars"></i>
-      </button>
-
-      <!-- Navbar -->
-      <ul class="navbar-nav ml-auto mr-0 mr-md-3 my-2 my-md-0">
-        <li class="nav-item dropdown no-arrow mx-1">
-          <a class="nav-link" href="/tasks-page">
-            <i class="fas fa-bell fa-fw"></i>
-          </a>
-        </li>
-        <li class="nav-item dropdown no-arrow mx-1">
-          <a class="nav-link" href="/messages-page">
-            <i class="fas fa-envelope fa-fw"></i>
-          </a>
-        </li>
-        <li class="nav-item dropdown no-arrow">
-          <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fas fa-user-circle fa-fw"></i>
-          </a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-            <h6 class="dropdown-header">Hi Mike Doe</h6>
-          </div>
-        </li>
-      </ul>
-
-    </nav>
+<%-include('sidebar')%>
 
     <div id="wrapper">
 
@@ -110,7 +80,7 @@
 
                     <i class="fas fa-fw fa-users"></i>
                   </div>
-                  <div class="mr-5">20 Articles indisponibles</div>
+                  <div class="mr-5"><%=indispo%> Articles indisponibles</div>
                 </div>
                 <a class="card-footer text-white clearfix small z-1" href="/catalog-page">
                   <span class="float-left">View Details</span>
@@ -127,7 +97,7 @@
                   <div class="card-body-icon">
                     <i class="fas fa-fw fa-comments"></i>
                   </div>
-                  <div class="mr-5">3 Messages non lus</div>
+                  <div class="mr-5"><%=counterM%> Messages non lus</div>
                 </div>
                 <a class="card-footer text-white clearfix small z-1" href="/messages-page">
                   <span class="float-left">View Details</span>
@@ -145,7 +115,7 @@
                   <div class="card-body-icon">
                     <i class="fas fa-fw fa-list"></i>
                   </div>
-                  <div class="mr-5">4 Tâches en cours</div>
+                  <div class="mr-5"><%=counterT%> Tâches en cours</div>
                 </div>
                 <a class="card-footer text-white clearfix small z-1" href="/tasks-page">
                   <span class="float-left">View Details</span>
