--- a/views/order.ejs
+++ b/views/order.ejs
@@ -27,37 +27,7 @@
 
   <body id="page-top">
 
-    <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
-
-      <a class="navbar-brand mr-1" href="/">Black Board</a>
-
-      <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
-        <i class="fas fa-bars"></i>
-      </button>
-
-      <!-- Navbar -->
-      <ul class="navbar-nav ml-auto mr-0 mr-md-3 my-2 my-md-0">
-        <li class="nav-item dropdown no-arrow mx-1">
-          <a class="nav-link" href="/tasks-page">
-            <i class="fas fa-bell fa-fw"></i>
-          </a>
-        </li>
-        <li class="nav-item dropdown no-arrow mx-1">
-          <a class="nav-link" href="/messages-page">
-            <i class="fas fa-envelope fa-fw"></i>
-          </a>
-        </li>
-        <li class="nav-item dropdown no-arrow">
-          <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fas fa-user-circle fa-fw"></i>
-          </a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-            <h6 class="dropdown-header">Hi Mike Doe</h6>
-          </div>
-        </li>
-      </ul>
-
-    </nav>
+    <%-include('sidebar')%>
 
     <div id="wrapper">
 
@@ -99,7 +69,7 @@
       <div id="content-wrapper">
 
         <div class="container-fluid">
-
+         
           <div class="card mb-3">
             <div class="card-header">
             <i class="fas fa-table"></i>
@@ -127,23 +97,38 @@
 
                   <tbody>
                     <tr>
-                      <td>Mon Oct 01 2018 02:00:00 GMT+0200 (GMT+02:00)</td>
-                      <td>869€</td>
-                      <td>23€</td>
-                      <td class="status-secondary"><i class="fas fa-circle"></i></td>
-                      <td>-</td>
-                      <td class="status-secondary"><i class="fas fa-circle"></i></td>
-                      <td>-</td>
-                      <td>22 Rue des Martyrs</td>
-                      <td>Paris</td>
-                      <td>75009</td>
-
+                      <td><%=dateFormat(order.date_insert)%></td>
+                      <td><%=order.total%>€</td>
+                      <td><%=order.shipping_cost%>€</td>
+                      <td class="status-secondary">
+                      <% 
+                      switch (order.status_payment) {
+                        case 'validated':
+                        classs="text-success";
+                        break;
+                        case 'waiting':
+                        classs="text-warning";
+                        break;
+                        default:
+                        classs="text-danger";
+                      }%>
+                      <i class="<%=classs%> fas fa-circle"></i></td>
+                      
+                      <td><%=dateFormat(order.date_payment)%></td>
+                      <td class="text-danger status-secondary">
+                        <%if(!order.status_shipment == true){%>
+                        <i class="fas fa-circle"></i>
+                        <%}else{%>
+                        <i class="text-success fas fa-circle"></i>
+                        <%}%>
+                        </td>
+                      <td><%=dateFormat(order.date_shipment)%></td>
+                      <td><%=order.delivery_address%></td>
+                      <td><%=order.delivery_city%></td>
+                      <td><%=order.delivery_zipcode%></td>
                     </tr>
-
                   </tbody>
                 </table>
-
-
 
                 <table id="product-list" class="table table-bordered" width="100%" cellspacing="0">
                   <thead>
@@ -165,21 +150,22 @@
                     </tr>
                   </tfoot>
                   <tbody>
-                    <tr>
-                      <td>Ninebot by Segway Kickscooter ES2</td>
-                      <td>Urbain - Route (8'), Autonomie Jusqu'à 25 km, Vitesse max. 25 km/h</td>
-                      <td>12,5kg</td>
-                      <td>499€</td>
-                      <td><img src="/images/ninebot-segway-kickscooter.jpg"></td>
-                    </tr>
-                    <tr>
+                    <%for(var i=0; i<order.articles.length ;i++){%>  
+                      <tr>
+                        <td><%=order.articles[i].title%>titre</td>
+                        <td><%=order.articles[i].description%></td>
+                        <td><%=order.articles[i].weight%>12,5kg</td>
+                        <td><%=order.articles[i].price%>499€</td>
+                        <td><img src="/images/<%=order.articles[i].img%>"></td>
+                      </tr>
+                      <%}%>
+                    <!-- <tr>
                       <td>Xiaomi M365</td>
                       <td>Autonomie Jusqu'à 25 km, Vitesse max. 25 km/h</td>
                       <td>12,5kg</td>
                       <td>370€</td>
                       <td><img src="/images/xiaomi M365-gris.jpg"></td>
-                    </tr>
-
+                    </tr> -->
                   </tbody>
                 </table>
 
