--- a/views/orders-list.ejs
+++ b/views/orders-list.ejs
@@ -27,37 +27,7 @@
 
   <body id="page-top">
 
-    <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
-
-      <a class="navbar-brand mr-1" href="/">Black Board</a>
-
-      <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
-        <i class="fas fa-bars"></i>
-      </button>
-
-      <!-- Navbar -->
-      <ul class="navbar-nav ml-auto mr-0 mr-md-3 my-2 my-md-0">
-        <li class="nav-item dropdown no-arrow mx-1">
-          <a class="nav-link" href="/tasks-page">
-            <i class="fas fa-bell fa-fw"></i>
-          </a>
-        </li>
-        <li class="nav-item dropdown no-arrow mx-1">
-          <a class="nav-link" href="/messages-page">
-            <i class="fas fa-envelope fa-fw"></i>
-          </a>
-        </li>
-        <li class="nav-item dropdown no-arrow">
-          <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fas fa-user-circle fa-fw"></i>
-          </a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-            <h6 class="dropdown-header">Hi Mike Doe</h6>
-          </div>
-        </li>
-      </ul>
-
-    </nav>
+    <%-include('sidebar')%>
 
     <div id="wrapper">
 
@@ -138,72 +108,39 @@
                     </tr>
                   </tfoot>
                   <tbody>
-                    <tr>
-                      <td>Mon Oct 01 2018 02:00:00 GMT+0200 (GMT+02:00)</td>
-                      <td>869€</td>
-                      <td>23€</td>
-                      <td class="status-secondary"><i class="fas fa-circle"></i></td>
-                      <td>-</td>
-                      <td class="status-secondary"><i class="fas fa-circle"></i></td>
-                      <td>-</td>
-                      <td>22 Rue des Martyrs</td>
-                      <td>Paris</td>
-                      <td>75009</td>
-                      <td><a href="/order-page">voir</a></td>
-                    </tr>
-                    <tr>
-                      <td>Mon Oct 01 2018 02:00:00 GMT+0200 (GMT+02:00)</td>
-                      <td>654€</td>
-                      <td>29€</td>
-                      <td class="status-success"><i class="fas fa-circle"></i></td>
-                      <td>Mon Oct 01 2018 02:00:00 GMT+0200 (GMT+02:00)</td>
-                      <td class="status-secondary"><i class="fas fa-circle"></i></td>
-                      <td>-</td>
-                      <td>76 Avenue Georges 5</td>
-                      <td>Paris</td>
-                      <td>75008</td>
-                      <td><a href="/order-page">voir</a></td>
-                    </tr>
-                    <tr>
-                      <td>Mon Oct 01 2018 02:00:00 GMT+0200 (GMT+02:00)</td>
-                      <td>910€</td>
-                      <td>33€</td>
-                      <td class="status-success"><i class="fas fa-circle"></i></td>
-                      <td>Mon Oct 01 2018 02:00:00 GMT+0200 (GMT+02:00)</td>
-                      <td class="status-success"><i class="fas fa-circle"></i></td>
-                      <td>Mon Oct 01 2018 02:00:00 GMT+0200 (GMT+02:00)</td>
-                      <td>7 Rue d'Athènes</td>
-                      <td>Paris</td>
-                      <td>75009</td>
-                      <td><a href="/order-page">voir</a></td>
-                    </tr>
-                    <tr>
-                      <td>Mon Oct 01 2018 02:00:00 GMT+0200 (GMT+02:00)</td>
-                      <td>430€</td>
-                      <td>23€</td>
-                      <td class="status-danger"><i class="fas fa-circle"></i></td>
-                      <td>refusé</td>
-                      <td class="status-secondary"><i class="fas fa-circle"></i></td>
-                      <td>-</td>
-                      <td>13 Rue Tupin</td>
-                      <td>Lyon</td>
-                      <td>69002</td>
-                      <td><a href="/order-page">voir</a></td>
-                    </tr>
-                    <tr>
-                      <td>Mon Oct 01 2018 02:00:00 GMT+0200 (GMT+02:00)</td>
-                      <td>632€</td>
-                      <td>27€</td>
-                      <td class="status-success"><i class="fas fa-circle"></i></td>
-                      <td>Mon Oct 01 2018 02:00:00 GMT+0200 (GMT+02:00)</td>
-                      <td class="status-success"><i class="fas fa-circle"></i></td>
-                      <td>Mon Oct 01 2018 02:00:00 GMT+0200 (GMT+02:00)</td>
-                      <td>33 Rue Malesherbes</td>
-                      <td>Lyon</td>
-                      <td>69006</td>
-                      <td><a href="/order-page">voir</a></td>
-                    </tr>
-
+                    <%for(var i=0;i<orderList.length;i++){%>
+                      <tr>
+                        <td><%=dateFormat(orderList[i].date_insert)%></td>
+                        <td><%=orderList[i].total%>€</td>
+                        <td><%=orderList[i].shipping_cost%>€</td>
+                        <td class="status-secondary">
+                          <% 
+                          switch (orderList[i].status_payment) {
+                            case 'validated':
+                            classs="text-success";
+                            break;
+                            case 'waiting':
+                            classs="text-warning";
+                            break;
+                            default:
+                            classs="text-danger";
+                          }%>
+                          <i class="<%=classs%> fas fa-circle"></i></td>
+                        <td><%=dateFormat(orderList[i].date_shipment)%></td>
+                        <td class="text-danger status-secondary">
+                          <%if(!orderList[i].status_shipment == true){%>
+                          <i class="fas fa-circle"></i>
+                          <%}else{%>
+                          <i class="text-success fas fa-circle"></i>
+                          <%}%>
+                          </td>
+                        <td><%=dateFormat(orderList[i].date_payment)%></td>
+                        <td><%=orderList[i].delivery_address%></td>
+                        <td><%=orderList[i].delivery_city%></td>
+                        <td><%=orderList[i].delivery_zipcode%></td>
+                        <td><a href="/order-page?id=<%=orderList[i]._id%>&articles=<%=orderList[i].articles%>">voir</a></td>
+                      </tr>
+                    <%}%>
                   </tbody>
                 </table>
               </div>
